# limix

./: .appveyor.yml  .coveragerc  .gitignore  .tags1  .travis.yml  LICENSE.md  MANIFEST.in  README.md  README.rst  checksum1.txt  conftest.py  install  protocol.txt  readthedocs.yml  requirements.txt  rtd-requirements.txt  script.py  setup.cfg  setup.py  test-requirements.txt  test.py
.github/ISSUE_TEMPLATE/: bug-report.md
data/: 1000G_kinship.npy
doc/: .gitignore  Makefile  api.rst  cli.rst  cmd.rst  conf.py  core.rst  data.rst  dev.rst  environment.yml  gwas.rst  her.rst  heritability.rst  iSet.rst  index.rst  install.rst  installation.rst  io.rst  iset.rst  make.bat  model.rst  mtSet.rst  mtset.rst  plot.rst  qc.rst  qtl.rst  requirements.txt  sh.rst  stats.rst  util.rst  varDecomp.rst  vardec.rst
doc/api/: limix.her.estimate.rst  limix.io.bgen.read.rst  limix.io.bimbam.read_phenotype.rst  limix.io.csv.read.rst  limix.io.gen.read.rst  limix.io.hdf5.read_limix.rst  limix.io.npy.read.rst  limix.io.plink.read.rst  limix.plot.ConsensusCurve.rst  limix.plot.box_aspect.rst  limix.plot.get_pyplot.rst  limix.plot.image.rst  limix.plot.kinship.rst  limix.plot.load_dataset.rst  limix.plot.manhattan.rst  limix.plot.normal.rst  limix.plot.pca.rst  limix.plot.power.rst  limix.plot.qqplot.rst  limix.plot.show.rst  limix.qc.boxcox.rst  limix.qc.compute_maf.rst  limix.qc.count_missingness.rst  limix.qc.indep_pairwise.rst  limix.qc.mean_impute.rst  limix.qc.mean_standardize.rst  limix.qc.normalise_covariance.rst  limix.qc.quantile_gaussianize.rst  limix.qc.regress_out.rst  limix.qc.remove_dependent_cols.rst  limix.qc.unique_variants.rst  limix.qtl.iscan.rst  limix.qtl.scan.rst  limix.sh.download.rst  limix.sh.extract.rst  limix.sh.filehash.rst  limix.sh.remove.rst  limix.stats.Chi2Mixture.rst  limix.stats.allele_expectation.rst  limix.stats.allele_frequency.rst  (+9 more)
doc/tutorials/: eqtl.rst  eqtl_vardec.rst  index.rst  structlmm.rst  vardec.py  vardec.rst
limix/: __init__.py  _cli.py  _config.py  _conftest.py  _dask.py  _dataset.py  _exception.py  _likelihood.py  _random.py  _testit.py  _threads.py  cmd.py  cmdlimix.py  conftest.py  covariates.py  dataframe.py  dataset_norm.py  display.py  fprint.py  likelihood.py  limits.py  nice_arrays.py  threads.py
limix/_bits/: __init__.py  array.py  dask.py  deco.py  pandas.py  xarray.py
limix/_cli/: _cli.py  _click.py  _download.py  _estimate_kinship.py  _extract.py  _fetch.py  _input.py  _layout.py  _misc.py  _pipeline.py  _preprocess.py  _scan.py  _see.py  _spec.py  _task.py  _toml.py  cli.py  download.py  estimate_kinship.py  extract.py  fetch.py  pipeline.py  preprocess.py  qtl.py  qtl_scan.py  qtl_scan_old.py  scan.py  see.py  st_scan.py  st_sscan.py
limix/_data/: __init__.py  _asarray.py  _assert.py  _conf.py  _conform.py  _dataarray.py  _dim.py  _lik.py  conf.py
limix/_display/: __init__.py  _aligned.py  _core.py  _display.py  _exception.py  _session.py
limix/_example/: _example.py
limix/_examples/: __init__.py  boxplot.py  kinship.py
limix/_plot/: __init__.py  boxplot.py  consensus.py  curve.py  image.py  kinship.py  limix_plot.py  manhattan.py  normal.py  pca.py  power.py  qqplot.py  style.py
limix/core/: __init__.py
limix/data/: __init__.py  bed_reader.py  geno_iterator.py  query.py  query_utils.py
limix/example/: _example.py  data.h5.bz2  xarr.hdf5.bz2
limix/glmm/: __init__.py  _composer.py  _cov.py  _mean.py
limix/gwas/: lmm.py  lmm_inter.py  lmm_step.py
limix/her/: __init__.py  _estimate.py  estimate.py
limix/heritability/: __init__.py  estimate.py
limix/iSet/: __init__.py  iset.py  mvSet.py  mvSetFull.py  mvSetInc.py
limix/io/: __init__.py  _csv.py  _detect.py  _fetch.py  _genotype.py  _phenotype.py  bgen.py  bimbam.py  csv.py  detect.py  gen.py  hdf5.py  npy.py  plink.py  util.py
limix/iset/: iset.py
limix/model/: __init__.py
limix/modules/: social_data_HSmice_paper.py
limix/mtSet/: __init__.py  iset.py  mtset.py
limix/mtset/: mtset.py
limix/plot/: __init__.py  boxplot.py  consensus.py  curve.py  image.py  kinship.py  manhattan.py  normal.py  pca.py  plot_normal.py  plotter.py  power.py  qqplot.py  style.py
limix/qc/: __init__.py  _allele.py  _gauss.py  _impute.py  _lik.py  _linalg.py  _mean_standardize.py  _mean_std.py  _missing.py  _quantile_gaussianize.py  _unique.py  allele.py  impute.py  kinship.py  ld.py  linalg.py  missing.py  regress.py  trans.py  transformation.py  unique.py  unique_variants.py
limix/qtl/: __init__.py  _gwas.py  _iresult.py  _iscan.py  _model.py  _mt_scan.py  _result.py  _result_old.py  _scan.py  _sscan.py  _st_iscan.py  _st_scan.py  _st_sscan.py  _table.py  glmm.py  gwas.py  interact.py  interaction.py  kronecker.py  lm.py  lmm.py  model.py  qtl.py  qtl_model.py  scan.py  test_qtl_st_sscan.py  util.py
limix/scripts/: __init__.py  _limix.py  iSet_analyze.py  iSet_postprocess.py  ilimix.py  iset_analyze.py  iset_postprocess.py  limix.py  limix_runner.py  mtSet_analyze.py  mtSet_definesets.py  mtSet_postprocess.py  mtSet_preprocess.py  mtSet_simPheno.py  mtset_definesets.py
limix/sh/: __init__.py  _extract.py  _file.py  _hash.py  _url.py
limix/stats/: __init__.py  _allele.py  _chi2.py  _confusion.py  _dosage.py  _kinship.py  _lrt.py  _pvalue.py  chi2mixture.py  confusion.py  fdr.py  kinship.py  lrt.py  pca.py  preprocess.py  pvalue.py  teststats.py  trans.py
limix/test/: test_compute_maf.py  test_dataframe.py  test_dataset.py  test_dataset_norm.py  test_likelihood.py  test_nice_arrays.py  test_threads.py
limix/util/: __init__.py  _array.py  _array_hash.py  _hash.py  _session_text.py  cmdline.py  extract.py  geno_utils.py  npy_dask.py  set_utils.py  timer.py  tmpdir.py  url.py  util_functions.py
limix/varDecomp/: __init__.py  varianceDecomposition.py
travis/: install_pandoc.sh  test.sh
(+86 files in other folders)
