[metadata]
author = C. Lippert, D. Horta, F. P. Casale, and O. Stegle
author_email = horta@ebi.ac.uk
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
description = A flexible and fast mixed model toolbox
download_url = https://github.com/limix/limix
keywords = association, glmm, lmm, genetics
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
maintainer = Danilo Horta
platforms = Windows, MacOS, Linux
maintainer_email = horta@ebi.ac.uk
name = limix
url = https://github.com/limix/limix
version = attr: version.get

[options]
zip_safe = True
include_package_data = True
packages = find:
setup_requires =
    pytest-runner>=4.2
install_requires =
    ansicolors>=1.1.8
    asciitree>=0.3.3
    bgen-reader>=1.1.2
    brent-search>=1.0.32
    dask[distributed,array,dataframe]>=0.17.4
    glimix-core>=1.4.3
    h5py>=2.7.1
    humanfriendly>=4.12.1
    joblib>=0.11
    limix-plot>=0.0.2
    matplotlib>=2.2.2
    ndarray-listener>=1.1.1
    numba>=0.38.0
    numpy-sugar>=1.2.3
    numpy>=1.14.3
    pandas-plink>=1.2.25
    pandas>=0.22.0
    pypandoc>=1.4
    pytest>=3.5.1
    pytest-doctestplus>=0.1.3
    scikit-learn>=0.19.1
    scikit-learn>=0.19.1
    scipy>=1.1.0
    seaborn>=0.8.1
    setuptools>=39.1.0
    statsmodels>=0.8.0
    tqdm>=4.23.3


[aliases]
test = pytest

[tool:pytest]
addopts =
    -x
    --doctest-plus
    --doctest-rst
    --doctest-modules
    --doctest-glob='*.rst'
    --ignore="setup.py"
    --ignore="doc/conf.py"
norecursedirs = .eggs .git *.egg-info build .ropeproject doc/_build
doctest_plus = enabled
doctest_optionflags = NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL ELLIPSIS
