[metadata]
author = C. Lippert, D. Horta, F. P. Casale, and O. Stegle
author_email = horta@ebi.ac.uk
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
description = A flexible and fast mixed model toolbox
download_url = https://github.com/limix/limix
keywords = association, glmm, lmm, genetics
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
maintainer = Danilo Horta
platforms = Windows, MacOS, Linux
maintainer_email = horta@ebi.ac.uk
name = limix
url = https://github.com/limix/limix
version = attr: version.get

[options]
zip_safe = True
include_package_data = True
packages = find:
setup_requires =
    pytest-runner>=4.2
install_requires =
    ansicolors>=1.1.8
    asciitree>=0.3.3
    blessings>=1.7
    bgen-reader>=2.0.1
    brent-search>=1.0.33
    dask[distributed,array,dataframe]>=0.18.1
    glimix-core>=1.4.3
    h5py>=2.8.0
    humanfriendly>=4.12.1
    joblib>=0.12.0
    limix-plot>=0.0.2
    matplotlib>=2.2.2
    ndarray-listener>=1.1.2
    numba>=0.38.1
    numpy-sugar>=1.2.5
    numpy>=1.14.5
    pandas-plink>=1.2.25
    pandas>=0.23.3
    pytest-doctestplus>=0.1.3
    pytest>=3.6.3
    scikit-learn>=0.19.1
    scipy>=1.1.0
    seaborn>=0.8.1
    setuptools>=40.0.0
    statsmodels>=0.9.0
    tqdm>=4.23.4

[aliases]
test = pytest

[tool:pytest]
addopts =
    -x
    --doctest-plus
    --doctest-rst
    --doctest-modules
    --doctest-glob='*.rst'
    --ignore="setup.py"
    --ignore="doc/conf.py"
norecursedirs = .eggs .git *.egg-info build .ropeproject doc/_build
doctest_plus = enabled
doctest_optionflags = NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL ELLIPSIS

[flake8]
ignore = E501 E741 E203

[doc8]
max-line-length = 88
