[metadata]
author = C. Lippert, D. Horta, F. P. Casale, and O. Stegle
author_email = horta@ebi.ac.uk
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
description = A flexible and fast mixed model toolbox
download_url = https://github.com/limix/limix
keywords = association, glmm, lmm, genetics
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
maintainer = Danilo Horta
platforms = Windows, MacOS, Linux
maintainer_email = horta@ebi.ac.uk
name = limix
url = https://github.com/limix/limix
version = attr: version.get

[options]
zip_safe = True
include_package_data = True
packages = find:
setup_requires =
    pytest-runner>=4.2
install_requires =
    asciitree>=0.3.3
    bgen-reader>=2.0.5
    blessings>=1.7
    brent-search>=1.0.33
    dask[array,dataframe]>=0.18.2
    glimix-core>=2.0.0
    h5py>=2.8.0
    humanfriendly>=4.16.1
    joblib>=0.12.2
    limix-plot>=0.0.3
    matplotlib>=2.2.3
    ndarray-listener>=1.1.2
    netcdf4>=1.4.1
    numba>=0.39.0
    numpy-sugar>=1.2.7
    numpy>=1.15.0
    pandas-plink>=1.2.28
    pandas>=0.23.4
    pytest>=3.7.1
    scikit-learn>=0.19.2
    scipy>=1.1.0
    setuptools>=40.0.0
    statsmodels>=0.9.0
    tqdm>=4.24.0
    xarray>=0.10.8

[aliases]
test = pytest

[tool:pytest]
addopts =
    --doctest-plus
    --doctest-rst
    --doctest-modules
    --doctest-continue-on-failure
    --doctest-glob='*.rst'
    --ignore="setup.py"
    --ignore="doc/conf.py"
norecursedirs = .eggs .git *.egg-info build .ropeproject doc/_build
doctest_plus = enabled
doctest_plus_atol = 1e-05
doctest_plus_rtol = 1e-04
doctest_optionflags = NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL ELLIPSIS

[flake8]
ignore = E501 E741 E203

[doc8]
max-line-length = 88
